--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,10 +60,11 @@
     <Compile Include="Assets\Scripts\Health.cs" />
     <Compile Include="Assets\Scripts\WaveConfigSO.cs" />
     <Compile Include="Assets\Scripts\DamageDealer.cs" />
+    <Compile Include="Assets\Scripts\CameraShake.cs" />
     <Compile Include="Assets\Scripts\Shooter.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\EnemySpawner.cs" />
-    <Compile Include="Assets\Scripts\CameraShake.cs" />
+    <Compile Include="Assets\Scripts\SpriteScroller.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Asset Packs\Spritesheet\sheet.xml" />
